Builder minor fixes